[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-currency-adapter'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec         = { package = 'parity-scale-codec', version = '3.1.5', features = ['max-encoded-len'], default-features = false }
frame-support = { workspace = true }
frame-system  = { workspace = true }
primitives    = { workspace = true }
scale-info    = { workspace = true, features = ['derive'] }
sp-runtime    = { workspace = true }

[features]
default     = ['std']
std         = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'scale-info/std',
  'primitives/std',
]
try-runtime = ['frame-support/try-runtime']

[lib]
doctest = false
