[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-distributed-oracle'
version = '1.8.4'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
orml-oracle   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = 'polkadot-v0.9.19', default-features = false }
orml-traits   = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = 'polkadot-v0.9.19', default-features = false }
pallet-traits = { path = '../traits', default-features = false }
pallet-assets      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
pallet-balances    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
pallet-prices      = { path = '../prices', default-features = false }
pallet-timestamp   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
primitives         = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
scale-info         = { version = '2.1', default-features = false, features = ['derive'] }
serde              = { version = '1.0.136', features = ['derive'], optional = true }
sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }
sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19', default-features = false }

[dev-dependencies]
orml-oracle             = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = 'polkadot-v0.9.19' }
pallet-currency-adapter = { path = '../currency-adapter' }
sp-core                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19' }
sp-io                   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.19' }
sp-keystore             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }


[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'serde',
  'codec/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'orml-traits/std',
  'orml-oracle/std',
  'primitives/std',
  'scale-info/std',
  'pallet-traits/std',
  'frame-benchmarking/std',
  'pallet-assets/std',
  'pallet-balances/std',
  'pallet-prices/std',
  'pallet-timestamp/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
