[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-dummy'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec         = { workspace = true, package = 'parity-scale-codec', features = ['max-encoded-len']}
frame-support = { workspace = true }
frame-system  = { workspace = true }
scale-info    = { workspace = true, features = ['derive'] }
sp-io         = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }
pallet-sudo = { workspace = true }
pallet-balances = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ['std'] }

[features]
default     = ['std']
std         = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'scale-info/std',
  'sp-std/std',
  'pallet-sudo/std',
  'pallet-balances/std',
]
try-runtime = ['frame-support/try-runtime']

[lib]
doctest = false
