[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-emergency-shutdown'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec         = { package = 'parity-scale-codec', version = '3.1.5', features = ['max-encoded-len'], default-features = false }
# codec         = { workspace = true, features = ['max-encoded-len']}
frame-support = { workspace = true }
frame-system  = { workspace = true }
pallet-traits = { workspace = true }
scale-info    = { workspace = true, features = ['derive'] }
sp-io         = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }

[features]
default     = ['std']
std         = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-traits/std',
  'sp-runtime/std',
  'scale-info/std',
  'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']

[lib]
doctest = false
