[package]
name = "pallet-evm-signatures"
authors = { workspace = true }
edition = '2021'
version = { workspace = true }

[dependencies]
codec = { workspace = true, package = 'parity-scale-codec', features = ['derive'] }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-evm = { workspace = true, features = ['forbid-evm-reentrancy'] }
primitives = { workspace = true }


[dev-dependencies]
hex-literal = { workspace = true }
libsecp256k1 = { workspace = true }
pallet-balances = { workspace = true, features = ['std'] }
sp-core = { workspace = true, features = ['std'] }
sp-keyring = { workspace = true }
pallet-assets = { workspace = true, features = ['std'] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"primitives/std",
]
try-runtime = ["frame-support/try-runtime"]

runtime-benchmarks = ['pallet-assets/runtime-benchmarks']