[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-farming'
version = '1.8.3'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '2.3.1', features = ['max-encoded-len'], default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
num-traits         = { default-features = false, version = '0.2' }
pallet-assets      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
pallet-traits      = { path = '../traits', default-features = false }
primitives         = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
scale-info         = { version = '1.0', default-features = false, features = ['derive'] }
serde              = { version = '1.0.136', features = ['derive'], optional = true }
sp-io              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }

[dev-dependencies]
pallet-balances         = { branch = 'polkadot-v0.9.17', git = 'https://github.com/paritytech/substrate.git' }
pallet-currency-adapter = { path = '../currency-adapter' }
sp-core                 = { branch = 'polkadot-v0.9.17', git = 'https://github.com/paritytech/substrate.git' }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking', 'frame-system/runtime-benchmarks']
std                = [
  'serde',
  'codec/std',
  'frame-benchmarking/std',
  'frame-support/std',
  'frame-system/std',
  'primitives/std',
  'sp-runtime/std',
  'pallet-assets/std',
  'scale-info/std',
  'sp-std/std',
  'num-traits/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
