[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-farming'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { workspace = true, package = 'parity-scale-codec', features = ['max-encoded-len'] }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
num-traits         = { workspace = true }
pallet-assets      = { workspace = true }
pallet-traits      = { workspace = true }
primitives         = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }
serde              = { workspace = true, features = ['derive'], optional = true }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
pallet-balances         = { workspace = true, features = ['std'] }
pallet-currency-adapter = { workspace = true, features = ['std'] }
sp-core                 = { workspace = true, features = ['std'] }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking', 'frame-system/runtime-benchmarks']
std                = [
  'serde',
  'codec/std',
  'frame-benchmarking/std',
  'frame-support/std',
  'frame-system/std',
  'primitives/std',
  'sp-runtime/std',
  'pallet-assets/std',
  'scale-info/std',
  'sp-std/std',
  'num-traits/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
