[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'pallet-liquid-staking-v2'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec           = { package = 'parity-scale-codec', version = '2.0.0', features= ['max-encoded-len'], default-features = false }
frame-support   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.9', default-features = false }
frame-system    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.9', default-features = false }
orml-traits     = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
sp-runtime      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.9', default-features = false }
sp-std          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.9', default-features = false }
xcm             = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.9', default-features = false }
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-tokens     = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }

# parallel pallets
primitives = { package = 'parallel-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.9', default-features = false }
serde           = { version = '1' }
sp-core         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.9', default-features = false }

[features]
default = ['std']
std     = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-std/std',
  'orml-traits/std',
  'orml-tokens/std',
  'orml-currencies/std',
  'primitives/std',
  'xcm/std',
]
