[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-liquid-staking'
version = '1.9.4'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.1.5', features = ['max-encoded-len'], default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
pallet-assets      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
pallet-traits      = { path = '../traits', default-features = false }
pallet-utility     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
pallet-xcm         = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32', default-features = false }
pallet-xcm-helper  = { path = '../xcm-helper', default-features = false }
scale-info         = { version = '2.1', default-features = false, features = ['derive'] }
sp-runtime         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
sp-std             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
sp-trie            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32', default-features = false }
xcm                = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32', default-features = false }

# parallel pallets
primitives = { package = 'parallel-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
pallet-babe      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }
pallet-balances  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }
pallet-session   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }
pallet-staking   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }
serde            = { version = '1.0.136' }
sp-core          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }
sp-io            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }
sp-state-machine = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.32' }

kusama-runtime              = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32', features = ['runtime-benchmarks'] }
polkadot-core-primitives    = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32' }
polkadot-parachain          = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32' }
polkadot-runtime-parachains = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32' }
xcm-builder                 = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32' }
xcm-executor                = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32' }
xcm-simulator               = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.32' }

cumulus-pallet-dmp-queue        = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.32' }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.32' }
cumulus-pallet-xcm              = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.32' }
cumulus-pallet-xcmp-queue       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.32' }
parachain-info                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.32' }

hex              = '0.4.3'
orml-traits      = { version = '0.4.1-dev' }
orml-xcm-support = { version = '0.4.1-dev' }
orml-xtokens     = { version = '0.4.1-dev' }

pallet-loans = { path = '../loans' }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-runtime/std',
  'sp-std/std',
  'sp-trie/std',
  'primitives/std',
  'pallet-assets/std',
  'xcm/std',
  'pallet-utility/std',
  'scale-info/std',
  'pallet-xcm/std',
  'pallet-xcm-helper/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
