[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-liquid-staking'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.1.5', features = ['max-encoded-len'], default-features = false }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-assets      = { workspace = true }
pallet-traits      = { workspace = true }
pallet-utility     = { workspace = true }
pallet-xcm         = { workspace = true }
pallet-xcm-helper  = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
sp-trie            = { workspace = true }
xcm                = { workspace = true }

# parallel pallets
primitives = { workspace = true }

[dev-dependencies]
pallet-babe      = { workspace = true }
pallet-balances  = { workspace = true }
pallet-session   = { workspace = true }
pallet-staking   = { workspace = true }
pallet-timestamp = { workspace = true }
serde            = { workspace = true }
sp-core          = { workspace = true }
sp-io            = { workspace = true }
sp-state-machine = { workspace = true }

kusama-runtime              = { workspace = true, features = ['runtime-benchmarks'] }
polkadot-core-primitives    = { workspace = true }
polkadot-parachain          = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
xcm-builder                 = { workspace = true }
xcm-executor                = { workspace = true }
xcm-simulator               = { workspace = true }

cumulus-pallet-dmp-queue        = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm              = { workspace = true }
cumulus-pallet-xcmp-queue       = { workspace = true }
parachain-info                  = { workspace = true }

hex              = '0.4.3'
orml-traits      = { version = '0.4.1-dev' }
orml-xcm-support = { version = '0.4.1-dev' }
orml-xtokens     = { version = '0.4.1-dev' }

pallet-loans            = { path = '../loans' }
pallet-currency-adapter = { path = '../currency-adapter' }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-runtime/std',
  'sp-std/std',
  'sp-trie/std',
  'primitives/std',
  'pallet-assets/std',
  'xcm/std',
  'pallet-utility/std',
  'scale-info/std',
  'pallet-xcm/std',
  'pallet-xcm-helper/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
