[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-liquid-staking'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { workspace = true, package = 'parity-scale-codec', features = ['max-encoded-len'] }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
pallet-assets      = { workspace = true }
pallet-traits      = { workspace = true }
pallet-utility     = { workspace = true }
pallet-xcm         = { workspace = true }
pallet-xcm-helper  = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
sp-trie            = { workspace = true }
xcm                = { workspace = true }

# parallel pallets
primitives = { workspace = true }

[dev-dependencies]
pallet-babe      = { workspace = true, features = ['std'] }
pallet-balances  = { workspace = true, features = ['std'] }
pallet-session   = { workspace = true, features = ['std'] }
pallet-staking   = { workspace = true, features = ['std'] }
pallet-timestamp = { workspace = true, features = ['std'] }
serde            = { workspace = true }
sp-core          = { workspace = true, features = ['std'] }
sp-io            = { workspace = true, features = ['std'] }
sp-state-machine = { workspace = true }

kusama-runtime              = { workspace = true, features = ['std'] }
polkadot-core-primitives    = { workspace = true }
polkadot-parachain          = { workspace = true, features = ['std'] }
polkadot-runtime-parachains = { workspace = true }
xcm-builder                 = { workspace = true, features = ['std'] }
xcm-executor                = { workspace = true, features = ['std'] }
xcm-simulator               = { workspace = true }

cumulus-pallet-dmp-queue        = { workspace = true, features = ['std'] }
cumulus-pallet-parachain-system = { workspace = true, features = ['std'] }
cumulus-pallet-xcm              = { workspace = true, features = ['std'] }
cumulus-pallet-xcmp-queue       = { workspace = true, features = ['std'] }
parachain-info                  = { workspace = true, features = ['std'] }

hex              = '0.4.3'
orml-traits      = { version = '0.4.1-dev', features = ['std'] }
orml-xcm-support = { version = '0.4.1-dev', features = ['std'] }
orml-xtokens     = { version = '0.4.1-dev', features = ['std'] }

pallet-loans            = { workspace = true, features = ['std'] }
pallet-currency-adapter = { workspace = true, features = ['std'] }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-runtime/std',
  'sp-std/std',
  'sp-trie/std',
  'primitives/std',
  'pallet-assets/std',
  'xcm/std',
  'pallet-utility/std',
  'scale-info/std',
  'pallet-xcm/std',
  'pallet-xcm-helper/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
