[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'pallet-liquidation'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec         = { package = 'parity-scale-codec', version = '2.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = '3.0.0', default-features = false }
frame-system  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = '3.0.0', default-features = false }
serde         = { package = 'alt_serde', version = '1', default-features = false, features = ['derive'] }
serde_json    = { package = 'alt_serde_json', version = '1', default-features = false, features = ['alloc'] }
sp-core       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = '3.0.0', default-features = false }
sp-io         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = '3.0.0', default-features = false }
sp-keystore   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = '0.9.0', optional = true }
sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = '3.0.0', default-features = false }
sp-std        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', version = '3.0.0', default-features = false }

pallet-loans      = { path = '../loans', default-features = false }
primitives        = { package = 'parallel-primitives', path = '../../primitives', default-features = false }


[features]
default = ['std']
std     = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-core/std',
  'sp-io/std',
  'sp-keystore',
  'sp-runtime/std',
  'sp-std/std',
  'pallet-loans/std',
  'primitives/std',
]
