[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'pallet-loans'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec           = { package = 'parity-scale-codec', version = '2.0.0', default-features = false }
frame-support   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', default-features = false, version = '3.0.0' }
frame-system    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', default-features = false, version = '3.0.0' }
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-tokens     = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-traits     = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-utilities  = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', version = '3.0.0', default-features = false }
primitives      = { package = 'parallel-primitives', path = '../../primitives', default-features = false }
serde           = { version = '1', features = ['derive'] }
sp-runtime      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', version = '3.0.0', default-features = false }
sp-std          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', version = '3.0.0', default-features = false }

[dev-dependencies]
lazy_static = { version = '1.4.0' }
sp-core     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', version = '3.0.0', default-features = false }
sp-io       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', version = '3.0.0', default-features = false }

[features]
default            = ['std']
runtime-benchmarks = []
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'orml-currencies/std',
  'orml-tokens/std',
  'orml-traits/std',
  'orml-utilities/std',
  'primitives/std',
  'sp-runtime/std',
  'sp-std/std',
  'pallet-balances/std',
]
