[package]
authors = { workspace = true }
edition = '2021'
name    = 'pallet-loans'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec              = { package = 'parity-scale-codec', version = '3.1.5', default-features = false }
frame-benchmarking = { workspace = true, optional = true }
frame-support      = { workspace = true }
frame-system       = { workspace = true }
num-traits         = { workspace = true }
orml-traits        = { workspace = true }
pallet-assets      = { workspace = true }
pallet-balances    = { workspace = true }
pallet-prices      = { workspace = true }
pallet-timestamp   = { workspace = true }
pallet-traits      = { workspace = true }
primitives         = { workspace = true }
scale-info         = { workspace = true, features = ['derive'] }
serde              = { workspace = true, features = ['derive'], optional = true }
sp-io              = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }

[dev-dependencies]
orml-oracle             = { workspace = true }
pallet-amm              = { workspace = true }
pallet-currency-adapter = { workspace = true }
sp-core                 = { workspace = true }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'orml-traits/std',
  'primitives/std',
  'sp-runtime/std',
  'sp-std/std',
  'sp-io/std',
  'pallet-assets/std',
  'pallet-prices/std',
  'pallet-balances/std',
  'pallet-timestamp/std',
  'serde',
  'scale-info/std',
  'num-traits/std',
  'pallet-traits/std',
]
try-runtime        = ['frame-support/try-runtime']

[lib]
doctest = false
