[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'pallet-nominee-election'
version = '3.0.0'

[dependencies]
codec         = { package = 'parity-scale-codec', version = '2.2.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
frame-system  = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
serde         = { version = '1.0.124', optional = true }
sp-runtime    = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
sp-std        = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
sp-io   = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

[features]
default     = ['std']
std         = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
