[package]
authors = ['Parallel Team']
edition = '2018'
name    = 'pallet-nominee-election'
version = '1.7.0'

[dependencies]
codec         = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
frame-system  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
scale-info    = { version = '1.0', default-features = false, features = ['derive'] }
serde         = { version = '1.0.124', optional = true }
sp-runtime    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-std        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }
sp-io   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11', default-features = false }

[features]
default     = ['std']
std         = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-std/std',
  'scale-info/std',
]
try-runtime = ['frame-support/try-runtime']
